test/fail_compilation/nortti_mini.d
/**
 * EXTRA_SOURCES: imports/nortti.d
 * REQUIRED_ARGS: -betterC -Irunnable/extra-files/miniRT -defaultlib= -release
 */

// Real test is in imports/nortti.d
